--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
         <header class="header">
             <nav class="nav" aria-label="Основная навигация">
                 <div class="nav__container">
-                    <a href="index.html" class="nav__logo">Логотип</a>
+                    <a href="index.html" class="nav__logo">АдаптивныйСайт</a>
                     <ul class="nav__menu">
                         <li><a href="index.html" class="nav__link">Главная</a></li>
                         <li><a href="projects.html" class="nav__link">Проекты</a></li>
@@ -28,14 +28,28 @@
             <section class="projects-page">
                 <div class="projects-page__container">
                     <h1 class="section-title">Наши проекты</h1>
-                    <p style="text-align: center; color: var(--text-light);">Страница в разработке</p>
+                    
+                    <div class="projects-preview__grid">
+                        <article class="project-card">
+                            <h3 class="project-card__title">Адаптивный лендинг</h3>
+                            <p class="project-card__description">Современный лендинг с использованием всех техник адаптивной вёрстки</p>
+                        </article>
+                        <article class="project-card">
+                            <h3 class="project-card__title">Интернет-магазин</h3>
+                            <p class="project-card__description">Полностью адаптивный интернет-магазин с корзиной</p>
+                        </article>
+                        <article class="project-card">
+                            <h3 class="project-card__title">Блог платформа</h3>
+                            <p class="project-card__description">Платформа для ведения блога с адаптивными изображениями</p>
+                        </article>
+                    </div>
                 </div>
             </section>
         </main>
 
         <footer class="footer">
             <div class="footer__container">
-                <p>&copy; 2025 Гревцева Алина Анатольевна. Все права защищены.</p>
+                <p>&copy; 2025 Практические занятия 15-16./p>
             </div>
         </footer>
     </div>
