--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <h2 class="section-title">1. Обычное responsive‑изображение</h2>
           <div class="image-container">
             <img
-              src="pictures/math-trainer.jpg"
+              src="pictures/math-trainer-1.jpg"
               alt="Математический тренажер — базовый пример"
               class="responsive-image">
           </div>
@@ -132,9 +132,9 @@
           <h2 class="section-title">2. Picture element</h2>
           <div class="image-container">
             <picture class="picture-demo">
-              <source srcset="pictures/todo-app.webp" type="image/webp">
+              <source srcset="pictures/todo-app-2.jpg" type="image/webp">
               <img
-                src="pictures/todo-app.jpg"
+                src="pictures/todo-app-2.jpg"
                 alt="Todo-приложение — пример picture"
                 class="responsive-image">
             </picture>
@@ -156,7 +156,7 @@
               <source media="(min-width: 1200px)" srcset="pictures/calculator-desktop.jpg">
               <source media="(min-width: 768px)" srcset="pictures/calculator-tablet.jpg">
               <img
-                src="pictures/calculator-mobile.jpg"
+                src="pictures/calculator-1.jpg"
                 alt="Калькулятор на разных устройствах"
                 class="responsive-image">
             </picture>
@@ -176,8 +176,8 @@
           <h2 class="section-title">4. Retina‑пример</h2>
           <div class="image-container">
             <img
-              src="pictures/math-trainer-icon.jpg"
-              srcset="pictures/math-trainer-icon.jpg 1x, pictures/math-trainer-icon@2x.jpg 2x"
+              src="pictures/math-trainer-1.jpg"
+              srcset="pictures/math-trainer-1.jpg 1x, pictures/math-trainer-icon@2x.jpg 2x"
               alt="Иконка математического тренажера"
               class="retina-image">
           </div>
@@ -195,15 +195,15 @@
           <h2 class="section-title">5. Object-fit</h2>
           <div class="object-fit-demo">
             <div class="object-fit-item">
-              <img src="pictures/todo-app-1.jpg" alt="Todo-приложение" class="object-fit-cover">
+              <img src="pictures/todo-app-2.jpg" alt="Todo-приложение" class="object-fit-cover">
               <span>object-fit: cover</span>
             </div>
             <div class="object-fit-item">
-              <img src="pictures/todo-app-1.jpg" alt="Todo-приложение" class="object-fit-contain">
+              <img src="pictures/todo-app-2.jpg" alt="Todo-приложение" class="object-fit-contain">
               <span>object-fit: contain</span>
             </div>
             <div class="object-fit-item">
-              <img src="pictures/todo-app-1.jpg" alt="Todo-приложение" class="object-fit-fill">
+              <img src="pictures/todo-app-2.jpg" alt="Todo-приложение" class="object-fit-fill">
               <span>object-fit: fill</span>
             </div>
           </div>
