--- a/contacts.html
+++ b/contacts.html
@@ -95,8 +95,8 @@
                             <span class="contact-icon">📧</span>
                             <div class="contact-details">
                                 <strong>Email для связи</strong>
-                                <a href="mailto:dev.portfolio@example.com" class="contact-link">
-                                    dev.portfolio@example.com
+                                <a href="mailto:grevtseva.a.a@edu.mirea.ru" class="contact-link">
+                                    grevtseva.a.a@edu.mirea.ru
                                 </a>
                                 <small>Рабочий email для всех вопросов</small>
                             </div>
@@ -106,8 +106,8 @@
                             <span class="contact-icon">💻</span>
                             <div class="contact-details">
                                 <strong>GitHub профиль</strong>
-                                <a href="https://github.com/portfolio-dev" target="_blank" rel="noopener noreferrer" class="contact-link">
-                                    github.com/portfolio-dev
+                                <a href="https://github.com/llinaxx" target="_blank" rel="noopener noreferrer" class="contact-link">
+                                    github.com/llinaxx
                                 </a>
                                 <small>Исходный код всех проектов</small>
                             </div>
@@ -117,7 +117,7 @@
                             <span class="contact-icon">📄</span>
                             <div class="contact-details">
                                 <strong>Резюме и портфолио</strong>
-                                <a href="assets/portfolio-resume.pdf" class="contact-link" download>
+                                <a href="assets/resume.pdf" class="contact-link" download>
                                     📥 Скачать резюме (PDF)
                                 </a>
                                 <small>Полная версия с деталями проектов</small>
@@ -131,7 +131,7 @@
                                 <div class="social-links">
                                     <a href="https://linkedin.com/in/portfolio-dev" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                                     •
-                                    <a href="https://t.me/portfolio_dev" target="_blank" rel="noopener noreferrer">Telegram</a>
+                                    <a href="https://t.me/llliiixxx" target="_blank" rel="noopener noreferrer">Telegram</a>
                                     •
                                     <a href="https://hh.ru/resume/portfolio" target="_blank" rel="noopener noreferrer">HH.ru</a>
                                 </div>
